--- a/f060e8ea2a0b6a51646a780739b8593fb71b7dab/index.html
+++ b/f060e8ea2a0b6a51646a780739b8593fb71b7dab/index.html
@@ -26,7 +26,7 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">Intro</a></li>
+								<li><a href="#intro">Announcements</a></li>
 								<li><a href="#calendar">Calendar</a></li>
 								<li><a href="#tracker">Tracker</a></li>
 								<li><a href="#docs">Docs</a></li>
@@ -44,10 +44,14 @@
 
 						<!-- Intro -->
 							<article id="intro">
-								<h2 class="major">Intro</h2>
+								<h2 class="major">Announcements</h2>
 								<span class="image main"><img src="images/flag.jpg" alt="" /></span>
-								<p></p>
-								<p></p>
+								<p>
+								<ul>
+									<li>Nininger Dinner 27 SEP 2018 </li>
+									<li>2CL Mando Brief 25 SEP 2018 1245-1315</li>
+								</ul>
+								</p>
 							</article>
 
 						<!-- Docs -->
@@ -65,7 +69,7 @@
 						<!-- Calendar -->
 							<article id="calendar">
 								<h2 class="major">Calendar</h2>
-								<p></p>
+								<p>UNDER CONSTRUCTION - COMING SOON</p>
 							</article>
 
 					</div>
