--- a/f060e8ea2a0b6a51646a780739b8593fb71b7dab/index.html
+++ b/f060e8ea2a0b6a51646a780739b8593fb71b7dab/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+s<!DOCTYPE HTML>
 
 <html>
 	<head>
@@ -26,7 +26,7 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">Announcements</a></li>
+								<li><a href="#intro">News</a></li>
 								<li><a href="#calendar">Calendar</a></li>
 								<li><a href="#tracker">Tracker</a></li>
 								<li><a href="#docs">Docs</a></li>
