--- a/f060e8ea2a0b6a51646a780739b8593fb71b7dab/index.html
+++ b/f060e8ea2a0b6a51646a780739b8593fb71b7dab/index.html
@@ -57,13 +57,13 @@ s<!DOCTYPE HTML>
 						<!-- Docs -->
 							<article id="docs">
 								<h2 class="major">Docs</h2>
-								<p><iframe src="https://drive.google.com/embeddedfolderview?id=11X92Pezrs5vh_csFCqOSbvF1AXzFRXIk#grid" width="750" height="500" frameborder="0"></iframe></p>
+								<p><iframe src="https://drive.google.com/embeddedfolderview?id=11X92Pezrs5vh_csFCqOSbvF1AXzFRXIk#grid" width="100%" height="500" frameborder="0"></iframe></p>
 							</article>
 
 						<!-- Tracker -->
 							<article id="tracker">
 								<h2 class="major">Tracker</h2>
-								<p><iframe src="https://docs.google.com/spreadsheets/d/1hyafhVjstRrd5F5kxpgVOnkOiNNrK5UYgx8-gvsZdTI/edit?usp=sharing;headers=false" width="750" height="500" frameborder="0"></iframe></p>
+								<p><iframe src="https://docs.google.com/spreadsheets/d/1hyafhVjstRrd5F5kxpgVOnkOiNNrK5UYgx8-gvsZdTI/edit?usp=sharing;headers=false" width="100%" height="500" frameborder="0"></iframe></p>
 							</article>
 
 						<!-- Calendar -->
