--- a/f060e8ea2a0b6a51646a780739b8593fb71b7dab/index.html
+++ b/f060e8ea2a0b6a51646a780739b8593fb71b7dab/index.html
@@ -48,8 +48,8 @@ s<!DOCTYPE HTML>
 								<span class="image main"><img src="images/flag.jpg" alt="" /></span>
 								<p>
 								<ul>
-									<li>Nininger Dinner 27 SEP 2018 </li>
-									<li>2CL Mando Brief 25 SEP 2018 1245-1315</li>
+									<li>Parents Weekend Hog Roast 19 OCT 18 </li>
+									<li>Spirit Survey coming out soon!</li>
 								</ul>
 								</p>
 							</article>
@@ -69,7 +69,7 @@ s<!DOCTYPE HTML>
 						<!-- Calendar -->
 							<article id="calendar">
 								<h2 class="major">Calendar</h2>
-								<p>UNDER CONSTRUCTION - COMING SOON</p>
+								<p><iframe src="https://calendar.google.com/calendar/embed?src=l8j2ip51r2rpudp0ej60ate30c%40group.calendar.google.com&ctz=America%2FNew_York" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe></p>
 							</article>
 
 					</div>
