--- a/index.html
+++ b/index.html
@@ -48,8 +48,11 @@ s<!DOCTYPE HTML>
 								<span class="image main"><img src="images/flag.jpg" alt="" /></span>
 								<p>
 								<ul>
-									<li>Parents Weekend Hog Roast 19 OCT 18 </li>
-									<li>Spirit Survey coming out soon!</li>
+									<li>Reminder to keep filling out the master tracker and FILLING OUT ROOM REGRISTRATION ON CIS (PLEBES)!!!!</li>
+									<li>Get your rooms in AMI</li>
+									<li>Beds should have been done by today. Team leaders, make sure the NC’s beds are made right.</li>
+									<li>Team leaders must execute library tours with their plebes using the checklist NLT 18 Aug 19 @ 1800 and turn it in to their CoC.</li>
+
 								</ul>
 								</p>
 							</article>
@@ -63,12 +66,12 @@ s<!DOCTYPE HTML>
 						<!-- Tracker -->
 							<article id="tracker">
 								<h2 class="major">Tracker</h2>
-								<p><iframe src="https://docs.google.com/spreadsheets/d/1hyafhVjstRrd5F5kxpgVOnkOiNNrK5UYgx8-gvsZdTI/edit?usp=sharing;headers=false" width="100%" height="600" frameborder="0"></iframe></p>
+								<p>Go to the new Teams tracker <a href="https://teams.microsoft.com/l/file/55D885E1-2B6E-432E-9FA5-8BEEB5B8A5E3?tenantId=99ff8811-3517-40a9-bf10-45ea0a321f0b&fileType=xlsx&objectUrl=https%3A%2F%2Fusarmywestpoint.sharepoint.com%2Fsites%2FCOMSTAFF1stregh12%2FShared%20Documents%2FGeneral%2FTRACKERS%2FMaster%20Tracker.xlsx&baseUrl=https%3A%2F%2Fusarmywestpoint.sharepoint.com%2Fsites%2FCOMSTAFF1stregh12&serviceName=teams&threadId=19:f09712908f2542c399a7dcb728bec30c@thread.skype&groupId=809107bb-092c-4208-8db3-b13fbb5b7fc1">here.</a></p>
 							</article>
 
 						<!-- Calendar -->
 							<article id="calendar">
-								<h2 class="major">Calendar</h2>
+								<h2 class="major">Updated Calendar Coming Soon</h2>
 								<p><iframe src="https://calendar.google.com/calendar/embed?src=l8j2ip51r2rpudp0ej60ate30c%40group.calendar.google.com&ctz=America%2FNew_York" style="border: 0" width="100%" height="600" frameborder="0" scrolling="no"></iframe></p>
 							</article>
 
