--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@ s<!DOCTYPE HTML>
 
 						<!-- Calendar -->
 							<article id="calendar">
-								<h2 class="major">Updated Calendar Coming Soon</h2>
-								<p><iframe src="https://calendar.google.com/calendar/embed?src=l8j2ip51r2rpudp0ej60ate30c%40group.calendar.google.com&ctz=America%2FNew_York" style="border: 0" width="100%" height="600" frameborder="0" scrolling="no"></iframe></p>
+								<h2 class="major">Calendar</h2>
+								<p><iframe src="https://calendar.google.com/calendar/embed?src=9u7co351o8o260vpgkm5tdgoo4%40group.calendar.google.com&ctz=America%2FNew_York" style="border: 0" width="100%" height="600" frameborder="0" scrolling="no"></iframe></p>
 							</article>
 
 					</div>
