--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@ s<!DOCTYPE HTML>
 							<ul>
 								<li><a href="#intro">News</a></li>
 								<li><a href="#calendar">Calendar</a></li>
-								<li><a href="#tracker">Tracker</a></li>
 								<li><a href="#docs">Docs</a></li>
+								<li><a href=#academics">Academics</a></li>
+								<li><a href="#tracker">Tracker</a></li>
 							</ul>
 						</nav>
 						<ul class="icons">
@@ -48,10 +49,11 @@ s<!DOCTYPE HTML>
 								<span class="image main"><img src="images/flag.jpg" alt="" /></span>
 								<p>
 								<ul>
-									<li>Reminder to keep filling out the master tracker and FILLING OUT ROOM REGRISTRATION ON CIS (PLEBES)!!!!</li>
-									<li>Get your rooms in AMI</li>
-									<li>Beds should have been done by today. Team leaders, make sure the NC’s beds are made right.</li>
-									<li>Team leaders must execute library tours with their plebes using the checklist NLT 18 Aug 19 @ 1800 and turn it in to their CoC.</li>
+									<li>Beds should have been done by yesterday. Team leaders, make sure the NC’s beds are made right.</li> 
+									<li>We are in AMI tomorrow.</li>
+									<li>Team leaders must execute library tours with their plebes using the attached checklist NLT 18 Aug 19 @ 1800 and turn it in to their CoC.</li>
+									<li>1CPT Run tomorrow!!!!</li>
+
 
 								</ul>
 								</p>
@@ -73,6 +75,11 @@ s<!DOCTYPE HTML>
 							<article id="calendar">
 								<h2 class="major">Calendar</h2>
 								<p><iframe src="https://calendar.google.com/calendar/embed?src=9u7co351o8o260vpgkm5tdgoo4%40group.calendar.google.com&ctz=America%2FNew_York" style="border: 0" width="100%" height="600" frameborder="0" scrolling="no"></iframe></p>
+							</article>
+						<!-- Academics -->
+							<article id="academics">
+								<h2 class="major">Academics</h2>
+								<p><iframe src="https://drive.google.com/embeddedfolderview?id=1SZuX3YsFBON7M_jeQ7hgVK2jDZ2M4WSo#grid" style="width:100%; height:600px; border:0;"></iframe></p>
 							</article>
 
 					</div>
