--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ s<!DOCTYPE HTML>
 								<li><a href="#intro">News</a></li>
 								<li><a href="#calendar">Calendar</a></li>
 								<li><a href="#docs">Docs</a></li>
-								<li><a href=#academics">Academics</a></li>
+								<li><a href="#academics">Academics</a></li>
 								<li><a href="#tracker">Tracker</a></li>
 							</ul>
 						</nav>
