--- a/index.html
+++ b/index.html
@@ -49,12 +49,24 @@ s<!DOCTYPE HTML>
 								<span class="image main"><img src="images/flag.jpg" alt="" /></span>
 								<p>
 								<ul>
-									<li>Beds should have been done by yesterday. Team leaders, make sure the NC’s beds are made right.</li> 
-									<li>We are in AMI tomorrow.</li>
-									<li>Team leaders must execute library tours with their plebes using the attached checklist NLT 18 Aug 19 @ 1800 and turn it in to their CoC.</li>
-									<li>1CPT Run tomorrow!!!!</li>
-
-
+									<li>Plebes
+										<ul>
+											<li>Baseline Grand Alliance Concussion Study testing for the Class of 2023 will be executed 23 August on the third Floor of Thayer Hall. All plebes are expected to report to the third floor tunnel between Thayer and Bartlett Hall no later than 1620. Testing is scheduled from 1630-1830 and will take the full 2 hours to complete. The only plebes excused from testing are those that have already completed the baseline assessments with their Corps Squad team (primarily fall sports).</li>
+											<li>Mando Plebe breakfast. No company tables have been allocated yet, but you will still go and will be ushered in by staff.</li>
+										</ul>
+									</li>
+									<li>YUKS
+										<ul><li>Library tours should have been completed as of today.</li></ul>
+									</li>
+									<li>COWS
+									<ul><li>Full Dress turn in for restriping goes this week at WB4.</li>/ul>
+									</li>
+									<li>FIRSTIES
+										<ul>
+											<li>If you did not turn in your Full Dress last week, turn it in this week.</li>
+											<li>A lot of Ring Ceremony Drill this week, Tuesday and Wednesday at Trophy Uniform MTF on uniform.</li>
+										</ul>
+									</li>
 								</ul>
 								</p>
 							</article>
