--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ s<!DOCTYPE HTML>
 										<ul><li>Library tours should have been completed as of today.</li></ul>
 									</li>
 									<li>COWS
-									<ul><li>Full Dress turn in for restriping goes this week at WB4.</li>/ul>
+									<ul><li>Full Dress turn in for restriping goes this week at WB4.</li></ul>
 									</li>
 									<li>FIRSTIES
 										<ul>
