--- a/index.html
+++ b/index.html
@@ -49,24 +49,15 @@ s<!DOCTYPE HTML>
 								<span class="image main"><img src="images/flag.jpg" alt="" /></span>
 								<p>
 								<ul>
-									<li>Plebes
-										<ul>
-											<li>Baseline Grand Alliance Concussion Study testing for the Class of 2023 will be executed 23 August on the third Floor of Thayer Hall. All plebes are expected to report to the third floor tunnel between Thayer and Bartlett Hall no later than 1620. Testing is scheduled from 1630-1830 and will take the full 2 hours to complete. The only plebes excused from testing are those that have already completed the baseline assessments with their Corps Squad team (primarily fall sports).</li>
-											<li>Mando Plebe breakfast. No company tables have been allocated yet, but you will still go and will be ushered in by staff.</li>
-										</ul>
-									</li>
-									<li>YUKS
-										<ul><li>Library tours should have been completed as of today.</li></ul>
-									</li>
-									<li>COWS
-									<ul><li>Full Dress turn in for restriping goes this week at WB4.</li></ul>
-									</li>
-									<li>FIRSTIES
-										<ul>
-											<li>If you did not turn in your Full Dress last week, turn it in this week.</li>
-											<li>A lot of Ring Ceremony Drill this week, Tuesday and Wednesday at Trophy Uniform MTF on uniform.</li>
-										</ul>
-									</li>
+									<li>Drill. 1CL Ring Ceremony drill will be conducted Tuesday (just for key leaders) and Wednesday (all 1CL).</li>
+									<li>Spirit Dinner. Spirit dinner goes at 1845 Thursday in As for Spirit.</li>
+									<li>Corps Squad athletes are authorized to wear team uniform / travel uniforms to mandatory dinners classified at spirit dinners. Uniforms must be clean and serviceable. The only uniform that is prohibited inside of the Mess Hall is APFU or Gym Alpha to maintain the sanitary standard of the facility</li>
+									<li>Labor Day pass. No one is allowed to leave on pass for Labor Day weekend until 0520 Saturday.</li>
+									<li>Counseling to Subordinates due NLT COB 23 AUG 19</li>
+									<li>Do Self-PDRs due on 22 AUG 19</li>
+									<li>Keep filling out the master tracker as well to assess completion of tasks in the company.</li>
+									<li>2nd CL FD restriping goes this week.</li>
+
 								</ul>
 								</p>
 							</article>
